--- a/caramel/index.html
+++ b/caramel/index.html
@@ -72,6 +72,6 @@
 </main>
 <canvas class="canvas-animation" id="c" height="4000"></canvas>
 <script src="js/common.js"></script>
-<script src="js/canvas.js"></script>
+<script src="canvas.js"></script>
 </body>
 </html>
