--- a/caramel/index.html
+++ b/caramel/index.html
@@ -2,16 +2,6 @@
 <html>
 <head>
     <title>SVG</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: #eee;
-        }
-    </style>
     <script type="text/javascript" src="js/vec.js"></script>
     <script type="text/javascript" src="js/points.js"></script>
     <script type="text/javascript" src="js/bezier_l.js"></script>
@@ -59,15 +49,207 @@
                 </div>
             </div>
         </li>
-        <li class="product sodas"></li>
-        <li class="product chocolats"></li>
-        <li class="product produits-laitiers"></li>
-        <li class="product biers"></li>
-        <li class="product alcools"></li>
-        <li class="product biscuits"></li>
-        <li class="product soupes-and-sauces"></li>
-        <li class="product boissons-energisantes"></li>
-        <li class="product pet-food"></li>
+        <li class="product sodas">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">Sodas</h3>
+                    <div class="open-popup-container">
+                        <button data-for="sodas" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="sodas" class="popup-desc hidden">
+                        <div class="popup-desc__title">Glaces</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product produits-laitiers">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">Produits-laitiers</h3>
+                    <div class="open-popup-container">
+                        <button data-for="produits-laitiers" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="produits-laitiers" class="popup-desc hidden">
+                        <div class="popup-desc__title">Produits-laitiers</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product chocolats">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">chocolats</h3>
+                    <div class="open-popup-container">
+                        <button data-for="chocolats" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="chocolats" class="popup-desc hidden">
+                        <div class="popup-desc__title">chocolats</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product biers">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">biers</h3>
+                    <div class="open-popup-container">
+                        <button data-for="biers" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="biers" class="popup-desc hidden">
+                        <div class="popup-desc__title">biers</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product biscuits">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">biscuits</h3>
+                    <div class="open-popup-container">
+                        <button data-for="biscuits" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="biscuits" class="popup-desc hidden">
+                        <div class="popup-desc__title">biscuits</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product soupes-and-sauces">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">Soupes and sauces</h3>
+                    <div class="open-popup-container">
+                        <button data-for="soupes-and-sauces" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="soupes-and-sauces" class="popup-desc hidden">
+                        <div class="popup-desc__title">Soupes and sauces</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="product boissons-energisantes">
+            <div class="product__wrapper">
+                <div class="product__container">
+                    <h3 class="product__title">boissons energisantes</h3>
+                    <div class="open-popup-container">
+                        <button data-for="boissons-energisantes" class="btn btn_open-popup"></button>
+                        <svg>
+                            <line
+                                    x1="0"
+                                    y1="0"
+                                    x2="0"
+                                    y2="0"/>
+                        </svg>
+                    </div>
+                    <div id="boissons-energisantes" class="popup-desc hidden">
+                        <div class="popup-desc__title">boissons energisantes</div>
+                        <ul class="popup-desc__items">
+                            <li class="popup-desc__item">Caramels aromatiques</li>
+                            <li class="popup-desc__item">Caramels aromatiques epaissis</li>
+                            <li class="popup-desc__item">Caramels colorants</li>
+                            <li class="popup-desc__item">Burnt sugars</li>
+                            <li class="popup-desc__item">Fourrages caramel</li>
+                            <li class="popup-desc__item">Eclats de caramel enrobes</li>
+                        </ul>
+                        <button class="popup-desc__close-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </li>
     </ul>
 </main>
 <canvas class="canvas-animation" id="c" height="4000"></canvas>
