--- a/life/index.html
+++ b/life/index.html
@@ -18,6 +18,11 @@
             <form class="enter-date-of-birth"></form>
 
             <div class="life"></div>
+            <footer class="footer">
+                <div class="container">
+                    Created by <a target="_blank" href="https://antsiferovmaxim.github.io/website/">Antsiferov Maxim</a>
+                </div>
+            </footer>
         </main>
         <script src="js/app.js"></script>
     </body>
