--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             max-width: 1000px;
             max-height: 1000px;
             height: 100vh;
+            margin: 0 auto;
         }
     </style>
 </head>
